<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.smartregister</groupId>
    <artifactId>opensrp-gateway-plugin</artifactId>
    <version>1.0.1</version>
  </parent>

  <artifactId>plugins</artifactId>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <project.basedir>${project.basedir}</project.basedir>
    <hapifhir.version>6.8.3</hapifhir.version>
    <fhir.proxy-plugin.version>0.2.0</fhir.proxy-plugin.version>
  </properties>

  <dependencies>

    <dependency>
      <groupId>com.google.fhir.gateway</groupId>
      <artifactId>server</artifactId>
      <version>0.3.2</version>
    </dependency>
    <dependency>
      <groupId>com.google.fhir.gateway</groupId>
      <artifactId>plugins</artifactId>
      <version>0.3.1</version>
    </dependency>
    <!-- Needed for JEE/Servlet support -->
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
      <version>4.0.1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>ca.uhn.hapi.fhir</groupId>
      <artifactId>hapi-fhir-client</artifactId>
      <version>${hapifhir_version}</version>
    </dependency>
    <dependency>
      <groupId>org.smartregister</groupId>
      <artifactId>fhir-common-utils</artifactId>
      <version>0.0.10-SNAPSHOT</version>
      <scope>compile</scope>
    </dependency>

  </dependencies>

</project>
